fixed consistent spacing between panels and added CV

--- a/scripts/custom.css
+++ b/scripts/custom.css
@@ -19,7 +19,7 @@ a, a:hover, a:visited {
 	margin-bottom: .5em;
 	margin-left: auto;
 	margin-right: auto;
-	padding: .5em 1em;
+	padding: .5em 1.75%;
 	background-color: #FFFFFF;
 	box-shadow: .3em .3em .8em #dddddd;
 }
